--- a/.github/workflows/discord.yml
+++ b/.github/workflows/discord.yml
@@ -9,7 +9,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: MarkdownToDiscord
         uses: LittleBigRefresh/MarkdownToDiscord@v1.1.3
         with:
