--- a/writerside.cfg
+++ b/writerside.cfg
@@ -2,7 +2,8 @@
 <!DOCTYPE ihp SYSTEM "https://resources.jetbrains.com/writerside/1.0/ihp.dtd">
 
 <ihp version="2.0">
-    <topics dir="." web-path="topics"/>
+    <topics dir="topics" web-path="topics"/>
+    <topics dir="topics/discord" web-path="discord"/>
     <images dir="pics" web-path="pics"/>
     <instance src="docs.tree"/>
 </ihp>
