--- a/writerside.cfg
+++ b/writerside.cfg
@@ -4,6 +4,6 @@
 <ihp version="2.0">
     <topics dir="topics" web-path="topics"/>
     <topics dir="topics/discord" web-path="discord"/>
-    <images dir="pics" web-path="pics"/>
+    <images dir="images" web-path="pics"/>
     <instance src="docs.tree"/>
 </ihp>
