--- a/.github/workflows/writerside.yml
+++ b/.github/workflows/writerside.yml
@@ -11,7 +11,7 @@ permissions:
   pages: write
 
 env:
-  INSTANCE: LittleBigRefresh/docs
+  INSTANCE: Docs/docs
   ARTIFACT: webHelpDOCS2-all.zip
   DOCKER_VERSION: 232.10165.1
 
