Fix discord markdown files path
Signed-off-by: Jayden <jvyden@jvyden.xyz>

--- a/.github/workflows/discord.yml
+++ b/.github/workflows/discord.yml
@@ -18,4 +18,4 @@ jobs:
         with:
           discordToken: ${{ secrets.DISCORD_TOKEN }}
           githubToken: ${{ secrets.GITHUB_TOKEN }}
-          markdownDirectory: "topics/discord"
+          markdownDirectory: "Docs/topics/discord"
